--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Demo</title>
 </head>
 <body>
-    <h1 style="background-color: blanchedalmond;">This ia Github</h1>
+    <h1 style="background-color: red;">This ia Github</h1>
 </body>
 </html>
